--- a/src/index.html
+++ b/src/index.html
@@ -398,6 +398,8 @@
             </svg>
           </a>
         </div>
+      </div>
+      <div class="copyright">
         <p>@ Все права защищены, 2019</p>
       </div>
     </footer>
