--- a/src/index.html
+++ b/src/index.html
@@ -381,26 +381,28 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container footer">
-        <a href="">
-          <img class="logo" src="./images/logo.svg" alt="" />
-        </a>
-        <div class="contact-info">
-          <a class="telephone" href="tel:38(000)0000000">
-            <svg class="icon-telephone" width="20" height="19">
-              <use href="./images/sprite.svg#telephone"></use>
-            </svg>
-            +38 (000) 000 00 00</a
-          >
+      <div class="container">
+        <div class="upper-section">
           <a href="">
-            <svg class="icon-instagram" width="40" height="40">
-              <use href="./images/sprite.svg#instagram"></use>
-            </svg>
+            <img class="logo" src="./images/logo.svg" alt="" />
           </a>
+          <div class="contact-info">
+            <a class="telephone" href="tel:38(000)0000000">
+              <svg class="icon-telephone" width="20" height="19">
+                <use href="./images/sprite.svg#telephone"></use>
+              </svg>
+              +38 (000) 000 00 00</a
+            >
+            <a href="">
+              <svg class="icon-instagram" width="40" height="40">
+                <use href="./images/sprite.svg#instagram"></use>
+              </svg>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="copyright">
-        <p>@ Все права защищены, 2019</p>
+        <div class="copyright">
+          <p>@ Все права защищены, 2019</p>
+        </div>
       </div>
     </footer>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен fchg главный SASS-файл. -->
