добавляет иконку instagram

--- a/src/index.html
+++ b/src/index.html
@@ -393,10 +393,8 @@
               </svg>
               +38 (000) 000 00 00</a
             >
-            <a href="">
-              <svg class="icon-instagram" width="40" height="40">
-                <use href="./images/sprite.svg#instagram"></use>
-              </svg>
+            <a href="#" class="icon-instagram">
+              <img src="./images/instagram.svg" alt="Иконка Инстаграм" />
             </a>
           </div>
         </div>
