добавляет разметку для guarantee

--- a/src/index.html
+++ b/src/index.html
@@ -433,6 +433,33 @@
             >
           </div>
         </div>
+        <section class="guarantees">
+          <h2 class="guarantees-title">Мы гарантируем</h2>
+          <div class="guarantees-wrapper">
+            <ul class="guarantees-list">
+              <li class="guarantees-item">
+                Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
+                тестировании. Иначе мы вернем деньги.
+                <span class="accent">&#42;</span>
+              </li>
+              <li class="guarantees-item">
+                Ты научишься писать сочинения минимум на 10 баллов из 14.
+                <span class="accent"
+                  >В то время как 20% учеников получили за сочинение 0.</span
+                >
+              </li>
+              <li class="guarantees-item">
+                Ты будешь заниматься в своем районе. Мы выберем место проведения
+                занятий после формирования команд.
+              </li>
+              <li class="guarantees-item">
+                Команды будут сформированы, исходя из начального уровня
+                учеников. Мы учитываем особенности каждого ученика.
+              </li>
+            </ul>
+          </div>
+        </section>
+
         <!-- <picture>
                       <source
                         srcset="
