добавил стили для ноута

--- a/src/index.html
+++ b/src/index.html
@@ -266,13 +266,13 @@
               <ul class="program-descriprion-list">
                 <li class="program-descriprion-item">
                   <span class="program-accent">— Grammar</span>
-                  <p>Nouns & Articles</p>
-                  <p>Adjectives & Adverb</p>
+                  <p class="program-text">Nouns & Articles</p>
+                  <p class="program-text">Adjectives & Adverb</p>
                 </li>
                 <li class="program-descriprion-item">
                   <span class="program-accent">— Vocabulary</span>
-                  <p>Family & Relations</p>
-                  <p>People & Society</p>
+                  <p class="program-text">Family & Relations</p>
+                  <p class="program-text">People & Society</p>
                 </li>
               </ul>
             </li>
@@ -281,15 +281,15 @@
               <ul class="program-descriprion-list">
                 <li class="program-descriprion-item">
                   <span class="program-accent">— Grammar</span>
-                  <p>Pronouns</p>
-                  <p>Active Voice</p>
-                  <p>Passive Voice</p>
+                  <p class="program-text">Pronouns</p>
+                  <p class="program-text">Active Voice</p>
+                  <p class="program-text">Passive Voice</p>
                 </li>
                 <li class="program-descriprion-item">
                   <span class="program-accent">— Vocabulary</span>
-                  <p>Home</p>
-                  <p>School</p>
-                  <p>Work</p>
+                  <p class="program-text">Home</p>
+                  <p class="program-text">School</p>
+                  <p class="program-text">Work</p>
                 </li>
               </ul>
             </li>
@@ -298,16 +298,16 @@
               <ul class="program-descriprion-list">
                 <li class="program-descriprion-item">
                   <span class="program-accent">— Grammar</span>
-                  <p>Modal verbs</p>
-                  <p>Infinitive</p>
-                  <p>Gerund</p>
-                  <p>Participle: 1, 2</p>
+                  <p class="program-text">Modal verbs</p>
+                  <p class="program-text">Infinitive</p>
+                  <p class="program-text">Gerund</p>
+                  <p class="program-text">Participle: 1, 2</p>
                 </li>
                 <li class="program-descriprion-item">
                   <span class="program-accent">— Vocabulary</span>
-                  <p>Travel & Tourism</p>
-                  <p>Culture & Free Time</p>
-                  <p>Sport</p>
+                  <p class="program-text">Travel & Tourism</p>
+                  <p class="program-text">Culture & Free Time</p>
+                  <p class="program-text">Sport</p>
                 </li>
                 <li class="program-descriprion-item">
                   <span class="program-accent">— Writing</span>
@@ -320,21 +320,21 @@
               <ul class="program-descriprion-list">
                 <li class="program-descriprion-item">
                   <span class="program-accent">— Grammar</span>
-                  <p>Clauses: Conditional and Wishes</p>
-                  <p>Direct / Reported speech</p>
-                  <p>Preposition</p>
-                  <p>Conjunction</p>
-                  <p>Numeral</p>
+                  <p class="program-text">Clauses: Conditional and Wishes</p>
+                  <p class="program-text">Direct / Reported speech</p>
+                  <p class="program-text">Preposition</p>
+                  <p class="program-text">Conjunction</p>
+                  <p class="program-text">Numeral</p>
                 </li>
                 <li class="program-descriprion-item">
                   <span class="program-accent">— Vocabulary</span>
-                  <p>Healthy Living</p>
-                  <p>Nature & Environment</p>
-                  <p>Money</p>
+                  <p class="program-text">Healthy Living</p>
+                  <p class="program-text">Nature & Environment</p>
+                  <p class="program-text">Money</p>
                 </li>
                 <li class="program-descriprion-item">
                   <span class="program-accent">— Writing</span>
-                  <p>Formal Letter</p>
+                  <p class="program-text">Formal Letter</p>
                 </li>
               </ul>
             </li>
@@ -343,8 +343,8 @@
               <ul class="program-descriprion-list">
                 <li class="program-descriprion-item">
                   <span class="program-accent">?????</span>
-                  <p>Revision</p>
-                  <p>Tests</p>
+                  <p class="program-text">Revision</p>
+                  <p class="program-text">Tests</p>
                 </li>
               </ul>
             </li>
