--- a/src/index.html
+++ b/src/index.html
@@ -531,7 +531,7 @@
       <div class="container">
         <div class="upper-section">
           <a href="">
-            <img class="logo" src="./images/logo.svg" alt="" />
+            <img class="logo" src="./images/logo/logo.svg" alt="" />
           </a>
           <div class="contact-info">
             <a class="telephone" href="tel:38(000)0000000">
