--- a/src/index.html
+++ b/src/index.html
@@ -244,42 +244,105 @@
             <p class="text">В свободное время  проходит курсы от лучших университетов мира по эффективному преподаванию и методикам написания сочинений. </p>
             <p class="text-last">В числе пройденных: English Grammar and Essay Writing (Berkeley), English Grammar&Style (The University of Queesland), How to Write an Essay (Berkeley), Academic and Business Writing (Berkeley), The Art of Teaching (GEMS education), Powerful Tools for Teaching and Learning (University of Houston).</p>
             <a class="link" href="">Cambrige English Entry Level Certificate</a>
-        </div>
 
+      </section>
+      <section class="section-slider">
+        <h2 class="title">Отзывы выпускников</h2>
+        <div class="main-slider container">
+          <div class="slider">
+            <div class="slider__wrapper">
+              <div class="slider__items">
+                <div class="slider__item">
+                  <div class="left-side">
+                    <img class="images-top" src="./images/slider/7.jpg" alt="">
+                    <img class="images-bottom" src="./images/slider/vk.svg" alt="">
+                  </div>
+                  <div class="right-side">
+                    <h3 class="title">Тоня Кучеровская</h3>
+                    <p class="text-top">Выпуск 2015-го года, Національний університет біоресурсів і природокористування України</p>
+                    <p class="text-bottom">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... <a class="accent" href="">Читать далее</a> </p>
+                  </div>
+                </div>
+                <div class="slider__item">
+                  <div class="left-side">
+                    <img class="images-top" src="./images/slider/7.jpg" alt="">
+                    <img class="images-bottom" src="./images/slider/vk.svg" alt="">
+                  </div>
+                  <div class="right-side">
+                    <h3 class="title">Тоня Кучеровская</h3>
+                    <p class="text-top">Выпуск 2015-го года, Національний університет біоресурсів і природокористування України</p>
+                    <p class="text-bottom">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... <a class="accent" href="">Читать далее</a> </p>
+                  </div>
+                </div>
+                <div class="slider__item">
+                  <div class="left-side">
+                    <img class="images-top" src="./images/slider/7.jpg" alt="">
+                    <img class="images-bottom" src="./images/slider/vk.svg" alt="">
+                  </div>
+                  <div class="right-side">
+                    <h3 class="title">Тоня Кучеровская</h3>
+                    <p class="text-top">Выпуск 2015-го года, Національний університет біоресурсів і природокористування України</p>
+                    <p class="text-bottom">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... <a class="accent" href="">Читать далее</a> </p>
+                  </div>
+                </div>
+                <div class="slider__item">
+                  <div class="left-side">
+                    <img class="images-top" src="./images/slider/7.jpg" alt="">
+                    <img class="images-bottom" src="./images/slider/vk.svg" alt="">
+                  </div>
+                  <div class="right-side">
+                    <h3 class="title">Тоня Кучеровская</h3>
+                    <p class="text-top">Выпуск 2015-го года, Національний університет біоресурсів і природокористування України</p>
+                    <p class="text-bottom">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... <a class="accent" href="">Читать далее</a> </p>
+                  </div>
+                </div>
+                <div class="slider__item">
+                  <div class="left-side">
+                    <img class="images-top" src="./images/slider/7.jpg" alt="">
+                    <img class="images-bottom" src="./images/slider/vk.svg" alt="">
+                  </div>
+                  <div class="right-side">
+                    <h3 class="title">Тоня Кучеровская</h3>
+                    <p class="text-top">Выпуск 2015-го года, Національний університет біоресурсів і природокористування України</p>
+                    <p class="text-bottom">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... <a class="accent" href="">Читать далее</a> </p>
+                  </div>
+                </div>
+                <div class="slider__item">
+                  <div class="left-side">
+                    <img class="images-top" src="./images/slider/7.jpg" alt="">
+                    <img class="images-bottom" src="./images/slider/vk.svg" alt="">
+                  </div>
+                  <div class="right-side">
+                    <h3 class="title">Тоня Кучеровская</h3>
+                    <p class="text-top">Выпуск 2015-го года, Національний університет біоресурсів і природокористування України</p>
+                    <p class="text-bottom">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... <a class="accent" href="">Читать далее</a> </p>
+                  </div>
+                </div>
+                <div class="slider__item">
+                  <div class="left-side">
+                    <img class="images-top" src="./images/slider/7.jpg" alt="">
+                    <img class="images-bottom" src="./images/slider/vk.svg" alt="">
+                  </div>
+                  <div class="right-side">
+                    <h3 class="title">Тоня Кучеровская</h3>
+                    <p class="text-top">Выпуск 2015-го года, Національний університет біоресурсів і природокористування України</p>
+                    <p class="text-bottom">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу похизуватись тим, що я студен ... <a class="accent" href="">Читать далее</a> </p>
+                  </div>
+                </div>
+                
+              </div>
+            </div>
+            <a class="slider__control slider__control_prev" href="#" role="button"></a>
+            <a class="slider__control slider__control_next" href="#" role="button"></a>
+          </div>
         </div>
-        <!-- <picture>
-          <source
-            srcset="
-              ./images/lecturer/mobile/teacher.jpg 1x,
-              ./images/lecturer/mobile/teacher@2x.jpg 2x
-            "
-            media="(max-width: 727px)"
-          />
-          <source
-            srcset="
-              ./images/lecturer/tablet/teacher-tablet.jpg 1x,
-              ./images/lecturer/tablet/teacher-tablet@2x.jpg 2x
-            "
-            media="(max-width: 1353px)"
-          />
-          <source
-            srcset="
-              ./images/lecturer/desktop/teacher-desktop.jpg 1x,
-              ./images/lecturer/desktop/teacher-desktop@2x.jpg 2x
-            "
-            media="(min-width: 1354px)"
-          />
-          <img
-            src="./images/lecturer/mobile/teacher.jpg"
-            alt=""
-          />
-        </picture> -->
-
+        
       </section>
 
     </main>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен fchg главный SASS-файл. -->
     <script src="./index.js"></script>
     <script src="./js/menu.js"></script>
+    <script src="./js/slider.js"></script>
   </body>
 </html>
