добавил разметку на все вьюпорты guarantees

--- a/src/index.html
+++ b/src/index.html
@@ -465,13 +465,14 @@
       <!-- ================================================================= -->
       <!-- =============== ГАРАНТИИ ======================================== -->
       <section class="guarantees">
-        <h2 class="guarantees-title">Мы гарантируем</h2>
-        <div class="guarantees-wrapper">
+        <div class="container">
+          <h2 class="guarantees-title">Мы гарантируем</h2>
           <ul class="guarantees-list">
             <li class="guarantees-item">
               Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
-              тестировании. Иначе мы вернем деньги.
-              <span class="accent">&#42;</span>
+              тестировании. Иначе мы вернем деньги.<span class="accent"
+                >&#42;</span
+              >
             </li>
             <li class="guarantees-item">
               Ты научишься писать сочинения минимум на 10 баллов из 14.
