добавил комментарии в index.html

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,11 @@
       rel="stylesheet"
     />
   </head>
-
   <body>
     <header class="page-header">
       <div class="container main-header">
         <a href="">
-          <img class="logo" src="./images/logo/logo.svg" alt="" />
+          <img class="logo" src="./images/logo/logo.svg" alt="логотип школы" />
         </a>
 
         <div class="menu-wrapper" data-menu>
@@ -63,7 +62,7 @@
       </div>
     </header>
     <main>
-      <!--======================= ГЕРОЙ ========================================-->
+      <!--================= ГЕРОЙ ======================================-->
       <section class="hero">
         <div class="container container-hero">
           <div class="hero-wrapper">
@@ -113,8 +112,8 @@
           </picture>
         </div>
       </section>
-      <!-- ================================================================== -->
-      <!-- ============== ПРЕИМУЩЕСТВА ======================================= -->
+      <!-- ============================================================= -->
+      <!-- ============== ПРЕИМУЩЕСТВА ================================= -->
       <section class="advantages">
         <div class="container">
           <h2 class="title advantages-title">Преимущества</h2>
@@ -147,7 +146,7 @@
         </div>
       </section>
       <!-- ============================================================= -->
-      <!-- =================== PROBLEMS =============================== -->
+      <!-- ============== PROBLEMS ===================================== -->
       <section class="problems">
         <div class="container container-problems">
           <h2 class="title">
@@ -187,8 +186,8 @@
           </ul>
         </div>
       </section>
-      <!-- ================================================================== -->
-      <!-- ======================== О НАС ===================================== -->
+      <!-- =============================================================== -->
+      <!-- =============== О НАС ======================================= -->
       <section class="about-us container">
         <h2 class="title">Как мы это делаем</h2>
         <ul class="list">
@@ -256,8 +255,8 @@
           </li>
         </ul>
       </section>
-      <!-- ================================================================== -->
-      <!--======================= НАША ПРОГРАММА ==========================-->
+      <!-- ================================================================-->
+      <!--=============== НАША ПРОГРАММА ================================-->
       <section class="program">
         <div class="container container-program">
           <h2 class="program-title">Наша программа</h2>
@@ -436,7 +435,7 @@
         </div>
       </section>
       <!-- ================================================================= -->
-      <!-- =============== ГАРАНТИИ ======================================== -->
+      <!-- ===============ГАРАНТИИ ======================================== -->
       <section class="guarantees">
         <div class="container">
           <h2 class="guarantees-title">Мы гарантируем</h2>
@@ -503,6 +502,7 @@
       </section>
       <!-- ================================================================= -->
     </main>
+    <!--================== FOOTER ========================================== -->
     <footer class="footer">
       <div class="container">
         <div class="upper-section">
@@ -526,14 +526,12 @@
         </div>
       </div>
     </footer>
-    <!-- Скрипт идёт последним в разметке. В нём уже подключен fchg главный SASS-файл. -->
-    <script src="./index.js"></script>
-    <script src="./js/menu.js"></script>
-    <!--============================== MODAL WINDOW =========================================-->
+    <!-- =================================================================== -->
+    <!--==================MODAL WINDOW ===================================== -->
     <div data-modal class="backdrop is-hidden">
       <div class="modal">
         <button type="button" data-modal-close class="cross-button">
-          <svg class="icon-close" width="18" height="18">
+          <svg class="icon-close-modal" width="18" height="18">
             <use href="./images/sprite.svg#icon-close"></use>
           </svg>
         </button>
@@ -614,6 +612,7 @@
         </form>
       </div>
     </div>
+    <!-- ========================================================================== -->
     <!-- Скрипт идёт последним в разметке. В нём уже подключен fchg главный SASS-файл. -->
     <script src="./index.js"></script>
     <script src="./js/menu.js"></script>
