--- a/src/index.html
+++ b/src/index.html
@@ -16,24 +16,24 @@
           <img class="logo" src="./images/logo/logo.svg" alt="логотип школы" />
         </a>
 
-        <div class="menu-wrapper" data-menu>
-          <a href="">
-            <img
-              class="logo-wrapper"
-              src="./images/logo/logo-white.svg"
-              alt=""
-            />
-          </a>
+        <div class="menu-wrapper " data-menu>
           <nav class="main-nav">
+            <a href="">
+              <img
+                class="logo-wrapper"
+                src="./images/logo/logo-white.svg"
+                alt=""
+              />
+            </a>
             <ul class="list">
               <li class="item">
-                <a class="link" href="">Программы обучения</a>
+                <a class="link" href="#program">Программы обучения</a>
               </li>
-              <li class="item"><a class="link" href="">О нас</a></li>
+              <li class="item"><a class="link" href="#about-us">О нас</a></li>
               <li class="item">
-                <a class="link" href="">Варианты обучения</a>
+                <a class="link" href="#options">Варианты обучения</a>
               </li>
-              <li class="item"><a class="link" href="">Контакты</a></li>
+              <li class="item"><a class="link" href="#contact">Контакты</a></li>
             </ul>
             <button class="nav-button">
               <span class="accent">консультация по телефону</span>
@@ -189,7 +189,7 @@
       <!-- =============================================================== -->
       <!-- =============== О НАС ======================================= -->
       <section class="about-us container">
-        <h2 class="title">Как мы это делаем</h2>
+        <h2 class="title" id="about-us">Как мы это делаем</h2>
         <ul class="list">
           <li class="item">
             <svg class="about-us-svg">
@@ -259,7 +259,7 @@
       <!--=============== НАША ПРОГРАММА ================================-->
       <section class="program">
         <div class="container container-program">
-          <h2 class="program-title">Наша программа</h2>
+          <h2 class="program-title" id="program">Наша программа</h2>
           <ul class="program-list">
             <li class="program-feature">
               <h3 class="program-subtitle">1 семестр</h3>
@@ -352,7 +352,7 @@
         </div>
         <!-- ====================== ПОЧЕМУ НАС ВЫБИРАЮТ ====================== -->
         <div class="pluses">
-          <div class="container container-pluses">
+          <div class="container container-pluses" id="options">
             <h2 class="title">Почему нас выбирают</h2>
             <ul class="pluses-list">
               <li class="pluses-item">
@@ -756,7 +756,7 @@
               </svg>
               +38 (000) 000 00 00</a
             >
-            <a href="#" class="icon-instagram">
+            <a href="#" class="icon-instagram" id="contact">
               <img src="./images/instagram.svg" alt="Иконка Инстаграм" />
             </a>
           </div>
