--- a/src/index.html
+++ b/src/index.html
@@ -428,7 +428,10 @@
               Art of Teaching (GEMS education), Powerful Tools for Teaching and
               Learning (University of Houston).
             </p>
-            <a class="link" href="https://www.cambridgeenglish.org/"
+            <a
+              class="link"
+              href="https://www.cambridgeenglish.org/"
+              target="_blank"
               >Cambrige English Entry Level Certificate</a
             >
           </div>
@@ -758,7 +761,11 @@
               </svg>
               +38 (000) 000 00 00</a
             >
-            <a href="https://www.instagram.com" class="icon-instagram">
+            <a
+              href="https://www.instagram.com"
+              target="_blank"
+              class="icon-instagram"
+            >
               <img src="./images/instagram.svg" alt="Иконка Инстаграм" />
             </a>
           </div>
