--- a/src/index.html
+++ b/src/index.html
@@ -751,11 +751,11 @@
           </a>
           <div class="contact-info">
             <a class="telephone" href="tel:38(000)0000000">
-              <svg class="icon-telephone" width="20" height="19">
+              <svg class="icon-telephone">
                 <use href="./images/sprite.svg#telephone"></use>
               </svg>
-              +38 (000) 000 00 00</a
-            >
+               <span class="footer-number">+38 (000) 000 00 00</span>
+            </a>
             <a href="#" class="icon-instagram" id="contact">
               <img src="./images/instagram.svg" alt="Иконка Инстаграм" />
             </a>
