добавлят якорь с кнопки в хедере

--- a/src/index.html
+++ b/src/index.html
@@ -35,16 +35,18 @@
               </li>
               <li class="item"><a class="link" href="#contact">Контакты</a></li>
             </ul>
-            <button class="nav-button">
+            <!-- <button class="nav-button">
               <span class="accent">консультация по телефону</span>
-            </button>
+            </button> -->
+            <a href="#register" class="nav-button">консультация по телефону</a>
           </nav>
         </div>
 
         <div class="main-button">
-          <button class="header-button">
+          <!-- <button class="header-button">
             <span class="accent">консультация по телефону</span>
-          </button>
+          </button> -->
+          <a href="#register" class="header-button">консультация по телефону</a>
 
           <button
             type="button"
@@ -342,7 +344,7 @@
               <h3 class="program-subtitle">5 семестр</h3>
               <ul class="program-descriprion-list">
                 <li class="program-descriprion-item">
-                  <span class="program-accent">?????</span>
+                  <span class="program-accent">—</span>
                   <p class="program-text">Revision</p>
                   <p class="program-text">Tests</p>
                 </li>
@@ -708,7 +710,7 @@
       </section>
       <!-- ================================================================= -->
       <!-- ============== РЕГИСТРАЦИЯ ====================================== -->
-      <section class="register">
+      <section class="register" id="register">
         <div class="container register-container">
           <h2 class="title-register">
             Регистрация на <span class="accent">бесплатную</span> телефонную
