пофиксил атрибут в form

--- a/src/index.html
+++ b/src/index.html
@@ -722,7 +722,7 @@
             <span class="accent">бесплатном занятии.</span> <br />
             С вами свяжется консультант и ответит на вопросы
           </p>
-          <form action="" class="form-register">
+          <form class="form-register">
             <label class="lable-register">
               <input
                 class="input-register"
