Исправил иконки и индикаторы в слайдере

--- a/src/index.html
+++ b/src/index.html
@@ -485,7 +485,7 @@
                     />
                     <img
                       class="images-bottom"
-                      src="./images/slider/vk.svg"
+                      src="./images/instagram.svg"
                       alt=""
                     />
                   </div>
@@ -516,7 +516,7 @@
                     />
                     <img
                       class="images-bottom"
-                      src="./images/slider/vk.svg"
+                      src="./images/instagram.svg"
                       alt=""
                     />
                   </div>
@@ -547,7 +547,7 @@
                     />
                     <img
                       class="images-bottom"
-                      src="./images/slider/vk.svg"
+                      src="./images/instagram.svg"
                       alt=""
                     />
                   </div>
@@ -578,7 +578,7 @@
                     />
                     <img
                       class="images-bottom"
-                      src="./images/slider/vk.svg"
+                      src="./images/instagram.svg"
                       alt=""
                     />
                   </div>
@@ -609,7 +609,7 @@
                     />
                     <img
                       class="images-bottom"
-                      src="./images/slider/vk.svg"
+                      src="./images/instagram.svg"
                       alt=""
                     />
                   </div>
@@ -640,7 +640,7 @@
                     />
                     <img
                       class="images-bottom"
-                      src="./images/slider/vk.svg"
+                      src="./images/instagram.svg"
                       alt=""
                     />
                   </div>
@@ -671,7 +671,7 @@
                     />
                     <img
                       class="images-bottom"
-                      src="./images/slider/vk.svg"
+                      src="./images/instagram.svg"
                       alt=""
                     />
                   </div>
