Сделаны картинки и анимации в слайдере

--- a/src/index.html
+++ b/src/index.html
@@ -480,11 +480,7 @@
                       src="./images/slider/7.jpg"
                       alt=""
                     />
-                    <img
-                      class="images-bottom"
-                      src="./images/slider/vk.svg"
-                      alt=""
-                    />
+                    <img src="./images/instagram.svg" alt="Иконка Инстаграм" />
                   </div>
                   <div class="right-side">
                     <h3 class="title">Тоня Кучеровская</h3>
@@ -511,11 +507,7 @@
                       src="./images/slider/7.jpg"
                       alt=""
                     />
-                    <img
-                      class="images-bottom"
-                      src="./images/slider/vk.svg"
-                      alt=""
-                    />
+                    <img src="./images/instagram.svg" alt="Иконка Инстаграм" />
                   </div>
                   <div class="right-side">
                     <h3 class="title">Тоня Кучеровская</h3>
@@ -542,11 +534,7 @@
                       src="./images/slider/7.jpg"
                       alt=""
                     />
-                    <img
-                      class="images-bottom"
-                      src="./images/slider/vk.svg"
-                      alt=""
-                    />
+                    <img src="./images/instagram.svg" alt="Иконка Инстаграм" />
                   </div>
                   <div class="right-side">
                     <h3 class="title">Тоня Кучеровская</h3>
@@ -573,11 +561,7 @@
                       src="./images/slider/7.jpg"
                       alt=""
                     />
-                    <img
-                      class="images-bottom"
-                      src="./images/slider/vk.svg"
-                      alt=""
-                    />
+                    <img src="./images/instagram.svg" alt="Иконка Инстаграм" />
                   </div>
                   <div class="right-side">
                     <h3 class="title">Тоня Кучеровская</h3>
@@ -604,11 +588,7 @@
                       src="./images/slider/7.jpg"
                       alt=""
                     />
-                    <img
-                      class="images-bottom"
-                      src="./images/slider/vk.svg"
-                      alt=""
-                    />
+                    <img src="./images/instagram.svg" alt="Иконка Инстаграм" />
                   </div>
                   <div class="right-side">
                     <h3 class="title">Тоня Кучеровская</h3>
@@ -635,11 +615,7 @@
                       src="./images/slider/7.jpg"
                       alt=""
                     />
-                    <img
-                      class="images-bottom"
-                      src="./images/slider/vk.svg"
-                      alt=""
-                    />
+                    <img src="./images/instagram.svg" alt="Иконка Инстаграм" />
                   </div>
                   <div class="right-side">
                     <h3 class="title">Тоня Кучеровская</h3>
@@ -666,11 +642,7 @@
                       src="./images/slider/7.jpg"
                       alt=""
                     />
-                    <img
-                      class="images-bottom"
-                      src="./images/slider/vk.svg"
-                      alt=""
-                    />
+                    <img src="./images/instagram.svg" alt="Иконка Инстаграм" />
                   </div>
                   <div class="right-side">
                     <h3 class="title">Тоня Кучеровская</h3>
