--- a/src/index.html
+++ b/src/index.html
@@ -725,7 +725,7 @@
                 type="tel"
                 name="tel"
                 placeholder="096-000-00-00"
-                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                pattern="[0-9]{10,12}"
                 required
               />
             </label>
@@ -805,7 +805,7 @@
               required
               placeholder="096-000-00-00"
               id="telephone"
-              pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+              pattern="[0-9]{10,12}"
             />
             <svg class="modal-icon" width="18" height="18">
               <use href="./images/sprite.svg#icon-phone"></use>
